crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__if_extra_indent.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/if_extra_indent.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..905,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 69..110,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 72..76,
                            value: true,
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 82..86,
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 95..100,
                                value: BinOp(
                                    ExprBinOp {
                                        node_index: NodeIndex(None),
                                        range: 95..100,
                                        left: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 95..96,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 99..100,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 106..110,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 112..118,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 112..113,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 116..118,
                            value: Int(
                                10,
                            ),
                        },
                    ),
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 158..248,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 161..165,
                            value: true,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 171..184,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 171..184,
                                        id: Name("before_nested"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 193..205,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 193..205,
                                        id: Name("first_nested"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 218..231,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 218..231,
                                        id: Name("second_nested"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 236..248,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 236..248,
                                        id: Name("after_nested"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 250..264,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 250..264,
                            id: Name("outside_nested"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 325..449,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 328..332,
                            value: true,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 338..353,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 338..353,
                                        id: Name("before_compound"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        If(
                            StmtIf {
                                node_index: NodeIndex(None),
                                range: 362..403,
                                test: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 365..374,
                                        id: Name("condition"),
                                        ctx: Load,
                                    },
                                ),
                                body: [
                                    Expr(
                                        StmtExpr {
                                            node_index: NodeIndex(None),
                                            range: 388..403,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 388..403,
                                                    id: Name("nested_compound"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                elif_else_clauses: [],
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 412..430,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 412..430,
                                        id: Name("recovered_compound"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 435..449,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 435..449,
                                        id: Name("after_compound"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 451..467,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 451..467,
                            id: Name("outside_compound"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 536..641,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 539..543,
                            value: true,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 549..563,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 549..563,
                                        id: Name("before_regions"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 572..584,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 572..584,
                                        id: Name("first_region"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 589..602,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 589..602,
                                        id: Name("middle_region"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 611..624,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 611..624,
                                        id: Name("second_region"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 629..641,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 629..641,
                                        id: Name("after_region"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 643..658,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 643..658,
                            id: Name("outside_regions"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 734..793,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 737..741,
                            value: true,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 747..759,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 747..759,
                                        id: Name("before_error"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 768..777,
                                value: Call(
                                    ExprCall {
                                        node_index: NodeIndex(None),
                                        range: 768..777,
                                        func: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 768..774,
                                                id: Name("broken"),
                                                ctx: Load,
                                            },
                                        ),
                                        arguments: Arguments {
                                            range: 774..777,
                                            node_index: NodeIndex(None),
                                            args: [],
                                            keywords: [],
                                        },
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 782..793,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 782..793,
                                        id: Name("after_error"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 795..808,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 795..808,
                            id: Name("outside_error"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            If(
                StmtIf {
                    node_index: NodeIndex(None),
                    range: 863..904,
                    test: BooleanLiteral(
                        ExprBooleanLiteral {
                            node_index: NodeIndex(None),
                            range: 866..870,
                            value: true,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 876..886,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 876..886,
                                        id: Name("before_eof"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 895..904,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 895..904,
                                        id: Name("final_eof"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | if True:
3 |     pass
4 |         a + b
  | ^^^^^^^^ Syntax Error: Unexpected indentation
5 |
6 |     pass
  |


   |
11 | if True:
12 |     before_nested
13 |         first_nested
   | ^^^^^^^^ Syntax Error: Unexpected indentation
14 |             second_nested
15 |     after_nested
   |


   |
12 |     before_nested
13 |         first_nested
14 |             second_nested
   | ^^^^^^^^^^^^ Syntax Error: Unexpected indentation
15 |     after_nested
   |


   |
20 | if True:
21 |     before_compound
22 |         if condition:
   | ^^^^^^^^ Syntax Error: Unexpected indentation
23 |             nested_compound
24 |         recovered_compound
   |


   |
30 | if True:
31 |     before_regions
32 |         first_region
   | ^^^^^^^^ Syntax Error: Unexpected indentation
33 |     middle_region
34 |         second_region
   |


   |
32 |         first_region
33 |     middle_region
34 |         second_region
   | ^^^^^^^^ Syntax Error: Unexpected indentation
35 |     after_region
   |


   |
40 | if True:
41 |     before_error
42 |         broken(,)
   | ^^^^^^^^ Syntax Error: Unexpected indentation
43 |     after_error
   |


   |
40 | if True:
41 |     before_error
42 |         broken(,)
   |                ^ Syntax Error: Expected an expression or a ')'
43 |     after_error
   |


   |
48 | if True:
49 |     before_eof
50 |         final_eof
   | ^^^^^^^^ Syntax Error: Unexpected indentation
   |
